[#680798] Fixed: Editor too wide, requires scrolling horizontally

--- a/ckeditor.css
+++ b/ckeditor.css
@@ -36,3 +36,8 @@
 table.cke_editor fieldset { 
   padding:0 !important;
 }
+
+body {
+  /* [#680798] */
+  min-width:400px;
+}
